# multi-forge

./: README.md
ForgeImager/: .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json
ForgeImager/.github/: dependabot.yml  labels.yml
ForgeImager/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
ForgeImager/.github/workflows/: data-sync-locales.yml  infrastructure-sync-labels.yml  maintenance-build.yml  maintenance-delete-releases.yml  maintenance-pr-check.yml  maintenance-release.yml
ForgeImager/crates/armbian-write-conf/: Cargo.toml
ForgeImager/crates/armbian-write-conf/src/: detect.rs  lib.rs  validate.rs
ForgeImager/crates/armbian-write-conf/tests/: inject_real_image.rs
ForgeImager/crates/forge-write-conf/: Cargo.toml
ForgeImager/crates/forge-write-conf/src/: lib.rs
ForgeImager/crates/forge-write-conf/tests/: inject_real_image.rs
ForgeImager/scripts/locales/: sync-locales.js
ForgeImager/scripts/setup/: install-linux.sh  install-macos.sh  install-windows.ps1  install.sh
ForgeImager/src/: App.tsx  i18n.ts  main.tsx
ForgeImager/src-tauri/: Cargo.toml  app.manifest  build.rs  entitlements.plist  tauri.conf.json
ForgeImager/src-tauri/capabilities/: default.json
ForgeImager/src-tauri/icons/: icon.icns
ForgeImager/src-tauri/src/: autoconfig.rs  cache.rs  decompress.rs  download.rs  main.rs  picture_cache.rs
ForgeImager/src-tauri/src/commands/: board_queries.rs  custom_image.rs  mod.rs  operations.rs  progress.rs  qdl_operations.rs  scraping.rs  settings.rs  state.rs  system.rs  update.rs
ForgeImager/src-tauri/src/config/: mod.rs
ForgeImager/src-tauri/src/devices/: linux.rs  macos.rs  mod.rs  types.rs  windows.rs
ForgeImager/src-tauri/src/flash/: mod.rs  verify.rs  windows.rs
ForgeImager/src-tauri/src/flash/linux/: mod.rs  privileges.rs  writer.rs
ForgeImager/src-tauri/src/flash/macos/: authorization.rs  bindings.rs  mod.rs  writer.rs
ForgeImager/src-tauri/src/images/: filters.rs  mod.rs  models.rs
ForgeImager/src-tauri/src/logging/: mod.rs
ForgeImager/src-tauri/src/paste/: mod.rs  upload.rs
ForgeImager/src-tauri/src/qdl/: boards.rs  detect.rs  extract.rs  flash.rs  loader.rs  mod.rs  provision.rs  registry.rs
ForgeImager/src-tauri/src/utils/: format.rs  http.rs  mod.rs  path.rs  progress.rs  system.rs
ForgeImager/src/assets/: index.ts
ForgeImager/src/components/: index.ts
ForgeImager/src/config/: autoconfig.ts  badges.ts  constants.ts  deviceColors.ts  i18n.ts  imageFilters.ts  index.ts  mono-logos.ts  os-info.ts  qdlBoards.ts  supportTiers.ts
ForgeImager/src/contexts/: ThemeContext.tsx  UpdateContext.tsx
ForgeImager/src/hooks/: useAsyncData.ts  useConnectivity.ts  useDeviceMonitor.ts  useFlashOperation.ts  useModalExitAnimation.ts  usePagedGrid.ts  useSettings.ts  useSettingsGroup.ts  useSkeletonLoading.ts  useTauri.ts  useToasts.tsx  useVendorLogos.ts
ForgeImager/src/locales/: de.json  en.json  es.json  fr.json  hr.json  it.json  ja.json  ko.json  nl.json  pl.json  pt-BR.json  pt.json  ru.json  sl.json  sv.json  tr.json  uk.json  zh.json
ForgeImager/src/styles/: base.css  components.css  flash.css  index.css  layout.css  modal.css  responsive.css  settings.css  theme.css
ForgeImager/src/types/: index.ts
ForgeImager/src/utils/: color.ts  deviceUtils.ts  distroTheme.ts  errorUtils.ts  index.ts
ForgeModules/totem/: README.md  changelog.md  install.py  install.sh  main_cli.py  main_gui.py  requirements.txt  setup.ps1  setup.sh
ForgeModules/totem/c_src/: stt.h
ForgeOS/: forge-agent.py  forge_display.py
ForgeOS/captive-portal/: server.py
Imager/src/: Style.qml  blank-catalog.json  downloadstatstelemetry.cpp  main.cpp  main.qml
docs/: btv-e10.md  roadmap.md
(+120 files in other folders)
